--- a/contact-me.html
+++ b/contact-me.html
@@ -11,7 +11,7 @@
   <hr><!--horizontal line-->
   <br>
   <p>Email: <a href="mailto: tanchinchee87@gmail.com">tanchinchee87@gmail.com</a></p>
-  <p>Telephone: <a href="tel: +65 91523415">91523415</a></p>
+  <p>Telephone: <a href="tel: +65 92xxxxxx">92xxxxxx</a></p>
 
 <hr>
 <h2>Get In Touch</h2>
